# private-assistant-intent-engine-py

./: .copier-answers.yml  .pre-commit-config.yaml  CHANGELOG.md  Containerfile  README.md  pyproject.toml  pytest.toml  renovate.json
.devcontainer/: Containerfile  devcontainer.json
.github/workflows/: container-build-pr.yml  container-build-push.yml  docker-build-action.yml  python_code_quality.yml
docs/: intent_patterns.example.yaml  main.md
scripts/: migrate_intent_patterns_to_db.sql  migrate_intent_patterns_to_db_v2.sql
src/private_assistant_intent_engine/: __init__.py  config.py  device_registry.py  entity_extractor.py  exceptions.py  intent_classifier.py  intent_engine.py  intent_patterns.py  intent_patterns_registry.py  main.py  text_tools.py
tests/: conftest.py  test_config.py  test_device_update.py  test_entity_extractor.py  test_error_handling.py  test_intent_classifier.py  test_intent_engine.py  test_intent_patterns_yaml.py  test_pattern_update.py  test_regex_patterns.py  test_text_tools.py
tests/data/: config.yaml
