[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "private-assistant-intent-engine"
version = "0.1.0"
description = "Intent engine for the private assistant ecosystem"
authors = ["stkr22 <stkr22@github.com>"]
readme = "README.md"
license = "GNU General Public License v3.0"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
typer = "^0.13.0"
private-assistant-commons = "^1.1.1"
spacy = "^3.7.5"
word2number = "^1.1"
en-core-web-md = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.7.1/en_core_web_md-3.7.1-py3-none-any.whl"}
pydantic = "^2.8.2"
aiomqtt = "^2.3.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.8"
mypy = "^1.11.2"
pytest = "^8.3.3"
types-pyyaml = "^6.0.12.20240724"

[tool.poetry.scripts]
private-assistant-intent-engine = "private_assistant_intent_engine.main:app"

[[tool.mypy.overrides]]
module = [
    "spotipy.*",
    "word2number"
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP"]
ignore = ["E203"]
