[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[project]
name = "private-assistant-intent-engine"
version = "2.0.0"
description = "Intent engine for the private assistant ecosystem"
authors = [
    { name = "stkr22", email = "stkr22@github.com" }
]
readme = "README.md"
license = "GPL-3.0-only"
license-files = [
    "LICENSE",
]

keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: General",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

requires-python = ">=3.12,<3.14"
dependencies = [
    "private-assistant-commons~=6.2.0",
    "spacy~=3.8.7",
    "pydantic",
    "aiomqtt",
    "en-core-web-md",
    "text2num~=3.0.0",
    "pydantic-settings",
    "typer~=0.21.1"
]

[tool.uv.sources]
en-core-web-md = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0-py3-none-any.whl" }

[project.urls]
Homepage = "https://github.com/stkr22/private-assistant-intent-engine-py"
Repository = "https://github.com/stkr22/private-assistant-intent-engine-py"
Documentation = "https://github.com/stkr22/private-assistant-intent-engine-py/tree/main/docs"
Issues = "https://github.com/stkr22/private-assistant-intent-engine-py/issues"
Changelog = "https://github.com/stkr22/private-assistant-intent-engine-py/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "ruff~=0.14.14",
    "mypy~=1.19.1",
    "pytest~=9.0.2",
    "pytest-cov~=7.0.0",
    "pytest-xdist~=3.8.0",
    "pytest-asyncio~=1.3.0",
    "types-pyyaml~=6.0.12.20240724",
]

[project.scripts]
private-assistant-intent-engine = "private_assistant_intent_engine.main:app"
